kubernetes/apps/network/gateway/envoy/gateways/cloudflare.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudflare
  labels:
    type: cloudflare
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname cloudflare.${D_HS}
spec:
  gatewayClassName: envoy
  addresses:
    - type: IPAddress
      value: 192.168.42.140
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${D_HS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-production-tls
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_HS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-production-tls

    - name: https-hca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_HCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-production-tls
    - name: https-hca-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_HCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-production-tls

    - name: https-igi
      protocol: HTTPS
      port: 443
      hostname: "*.${D_IGI}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_IGI//./-}-production-tls
    - name: https-igi-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_IGI}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_IGI//./-}-production-tls

    - name: https-lmvca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_LMVCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-production-tls
    - name: https-lmvca-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_LMVCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-production-tls
