kubernetes/apps/network/gateway/envoy/gateways/external.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  labels:
    type: external
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname direct.${D_HS}
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 192.168.42.130
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${D_HS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-wildcard-production-tls
    - name: https-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_HS}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HS//./-}-apex-production-tls

    - name: https-hca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_HCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-wildcard-production-tls
    - name: https-hca-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_HCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_HCA//./-}-apex-production-tls

    - name: https-igi
      protocol: HTTPS
      port: 443
      hostname: "*.${D_IGI}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_IGI//./-}-wildcard-production-tls
    - name: https-igi-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_IGI}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_IGI//./-}-apex-production-tls

    - name: https-sn
      protocol: HTTPS
      port: 443
      hostname: "*.${D_SN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_SN//./-}-wildcard-production-tls
    - name: https-sn-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_SN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_SN//./-}-apex-production-tls

    - name: https-taca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_TACA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_TACA//./-}-wildcard-production-tls
    - name: https-taca-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_TACA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_TACA//./-}-apex-production-tls

    - name: https-tan
      protocol: HTTPS
      port: 443
      hostname: "*.${D_TAN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_TAN//./-}-wildcard-production-tls
    - name: https-tan-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_TAN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_TAN//./-}-apex-production-tls

    - name: https-lmvca
      protocol: HTTPS
      port: 443
      hostname: "*.${D_LMVCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-wildcard-production-tls
    - name: https-lmvca-apex
      protocol: HTTPS
      port: 443
      hostname: "${D_LMVCA}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: ${D_LMVCA//./-}-apex-production-tls
